Just Use lexure

--- a/dashboard/public/views/home.ejs
+++ b/dashboard/public/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/media.css" />
     <title>Mad Bot</title>
     <script>
       window.onload = async () => {
@@ -16,7 +17,23 @@
   </head>
   <body>
     <div class="navBar">
-      <h1>Mad Bot</h1>
+      <div style="display: inline">
+        <h1
+          style="margin-top: 20px"
+          class="MadBotSideTextHeader HeaderTopBotname"
+        >
+          &nbsp;Mad Bot
+        </h1>
+        <p class="MadBotSideTextHeader HeaderTopNote">
+          Multi Purpose Discord Bot
+        </p>
+        <img
+          src="https://cdn.discordapp.com/avatars/770574530694610956/b9e17b3a8b56ba4be499f24382ae695e.png?size=64"
+          alt=""
+          class="HeaderThumbnail"
+        />
+      </div>
+      <h1 class="HeaderMain">MadBot Dashboard</h1>
     </div>
   </body>
 </html>
