--- a/dashboard/public/css/style.css
+++ b/dashboard/public/css/style.css
@@ -2,8 +2,42 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .navBar {
-  background-color: red;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: rgb(232, 101, 101);
+  height: 100px;
+  font-size: 2rem;
+}
+
+.HeaderMain {
+  position: fixed;
+  float: none;
+  top: 6px;
+  left: 34vw;
+}
+
+.MadBotSideTextHeader {
+  display: inline;
+}
+
+.HeaderTopNote {
+  margin-left: 6px;
+  font-size: 1rem;
+}
+
+.HeaderThumbnail {
+  float: right;
+  margin-right: 20px;
+  height: 9.8vh;
+  width: 5vw;
+  margin-top: 4px;
+}
+
+body {
+  background-color: blue;
 }
