--- a/dashboard/public/css/style.css
+++ b/dashboard/public/css/style.css
@@ -15,8 +15,7 @@
 }
 
 .HeaderMain {
-  position: fixed;
-  float: none;
+  position: absolute;
   top: 6px;
   left: 34vw;
 }
@@ -40,4 +39,13 @@
 
 body {
   background-color: blue;
+}
+
+.Servers {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 500px 500px 500px;
+  grid-auto-rows: 300px;
+  justify-content: center;
+  grid-gap: 50px;
 }
